--- a/css/style.css
+++ b/css/style.css
@@ -4,12 +4,14 @@
     box-sizing: border-box;
     font-family: 'Montserrat', sans-serif;
 }
+
 main {
     margin-bottom: 100px;
 }
 .container-main {
     display: flex;
 }
+
 #col-left {
     width: 300px;
     background-color: black;
@@ -25,6 +27,9 @@ main {
     height: 100vh;
     margin-left: 300px;
 }
+
+/* SECTION LEFT SPOTIFY BAR */
+
 .container-left {
     display: flex;
     flex-direction: column;
@@ -41,6 +46,55 @@ main {
     height: 200px;
     background-color: blueviolet;
 }
+
+/* TRASPARENCY SECTION UPGRADE */
+
+#upgrade {
+    width: calc(100% - 300px);
+    height: 100px;
+    background-color: black;
+    opacity: 0.5;
+    position: fixed;
+    top: 0;
+    left: 300px;
+    display: flex;
+    justify-content: flex-end;
+}
+#section-upgrade {
+    width: 50px;
+    height: 50px;
+    background-color: antiquewhite;
+}
+
+/* SCROLLING SECTION */
+
+#generi {
+    width: 100%;
+    height: 50px;
+    background-color: bisque;
+    margin-top: 100px;
+}
+.container-recently {
+    display: flex;
+    width: 100%;
+    min-height: 200px;
+    background-color: rgb(29, 6, 121);
+}
+.container-perte {
+    display: flex;
+    width: 100%;
+    min-height: 200px;
+    background-color: aquamarine;
+}
+.container-popular {
+    display: flex;
+    width: 100%;
+    min-height: 200px;
+    background-color: rgb(162, 246, 36);
+}
+
+
+
 
 .container-tools {
     background-color: #282828;
